Fix some UI bugs (#400)
* stop storing fullscreenElement in redux store

* if username is too long, dont overflow sidebar and truncate username

* dont allow titles to overflow past 60ch in the media pages, wrap them if they do, fix positioning of the dropdown

--- a/ui/src/Pages/Media/MetaContent.scss
+++ b/ui/src/Pages/Media/MetaContent.scss
@@ -50,6 +50,7 @@
   .title {
     display: flex;
     justify-content: space-between;
+    max-width: 60ch;
 
     h1 {
       font-family: "Roboto Bold", Arial;
